# VRTools

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  c2p.bat
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
src/: dllmain.cpp
src/Core/: Core.cpp  Core.hpp  CrashHandler.cpp  CrashHandler.hpp  Logger.cpp  Logger.hpp  Version.hpp
src/Core/Events/: EventManager.hpp  GameEvents.hpp  IEvent.hpp  NetworkEvents.hpp  RenderEvents.hpp
src/Core/Settings/: ISettingsHandler.hpp  SettingValue.hpp  SettingsGroup.hpp  SettingsManager.cpp  SettingsManager.hpp
src/Features/: FeatureCategory.hpp  FeatureManager.cpp  FeatureManager.hpp  IFeature.hpp  LogWindow.hpp  Menu.cpp  Menu.hpp
src/Features/Framework/: FeatureManager.hpp  IFeature.hpp
src/Features/HUD/: HUDManager.cpp  HUDManager.hpp  IHUDComponent.cpp  IHUDComponent.hpp
src/HUD/: HUDComponent.cpp  HUDComponent.hpp  HUDDef.hpp  HUDManager.cpp  HUDManager.hpp  HUDUtils.hpp
src/HUD/Components/: LogComponent.cpp  LogComponent.hpp
src/Hooking/: GameHooks.cpp  GameHooks.hpp  HookManager.cpp  HookManager.hpp  WndProcHook.cpp  WndProcHook.hpp
src/Input/: CursorManager.cpp  CursorManager.hpp  InputManager.cpp  InputManager.hpp
src/Rendering/: Renderer.cpp  Renderer.hpp
src/SDK/Game/: APIUser.hpp  Networking.cpp  Networking.hpp  PlayerManager.cpp  PlayerManager.hpp  PlayerRank.hpp  VRCHelper.cpp  VRCPlayerApi.cpp  VRCPlayerApi.hpp  VRC_Player.hpp
src/SDK/Il2Cpp/: Binding.hpp  Functions.hpp  Il2Cpp.cpp  Il2Cpp.hpp  Structs.hpp
src/SDK/Unity/: Bounds.hpp  (+16 more)
src/UI/: Notification.hpp  NotificationManager.cpp  NotificationManager.hpp
src/Utils/: ColorUtils.hpp  ImGuiUtils.hpp  JsonConverters.hpp  Math.hpp  PatternScan.hpp  RenderUtils.cpp  RenderUtils.hpp
(+48 files in other folders)
